--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PS'
 - !lcsh 'Mesmerism -- Fiction'
+- GITenberg
 title: Professor Huskins
 url: http://www.gutenberg.org/ebooks/35551
